checkbox (0.17ubuntu1) UNRELEASED; urgency=low

  [ Zygmunt Krynicki ]
  * Incremented changelog
  * Make plainbox-service a transitional package that depends on
    checkbox-ng-service. 

  [ Manoj Iyer ]
  * Make cpu stress test work with cloud instances. Cloud instances have
    typically have limited resources so added logic to utilize less memory,
    at the same time keeping the CPU utilization unchanged at 100%.

 -- Manoj Iyer <manoj.iyer@canonical.com>  Tue, 19 Nov 2013 13:49:33 -0600

checkbox (0.16.15) precise; urgency=low

  [ Brendan Donegan ]
  * scripts/brightness_test - Update get_best_interface function to use
    heuristic prescribed by the kernel for selecting the backlight
    interface to use (LP: #1250437)

  [ Daniel Manrique ]
  * jobs/stress.txt: Refer the stress log checking jobs to a single test file,
    rather than using wildcards, which causes strange results (LP: #1161718)
  * scripts/virtualization: Removed stray space in -net parameters causing
    test failures (LP: #1250568)
  * data/whitelists: Updated whitelists that require the new rtc resource
    (LP: #1251781)

  * Drop dependency from plainbox to checkbox, as it is not really required
    and used to be there so that plainbox would see all of the jobs. Now with
    fine-grained job providers this is no longer needed. 

 -- Zygmunt Krynicki <zygmunt.krynicki@canonical.com>  Wed, 06 Nov 2013 14:00:42 +0100

checkbox (0.16.14) saucy; urgency=low

    [ Chris Gregan ]
  * jobs/suspend.txt.in - added tests for running iperf tests before and after 
    suspend on all devices ether and wifi

  * jobs/wireless.txt.in - added tests for checking 80211 modules loaded and a 
    script to scripts to execute that check named wireless_ext. Test added to run 
    iwconfig query against all devices found on the system.

  * jobs/ethernet.txt.in - added test for running ethtool queries against all 
    devices found on the system.

  [ Brendan Donegan ]