@@ -1,5 +1,8 @@
 checkbox (0.17ubuntu1) UNRELEASED; urgency=low
 
+  [ Chris Gregan ]
+  * Updates made to touchpad and suspend jobs for new tests. 
+
   [ Zygmunt Krynicki ]
   * Incremented changelog
   * Make plainbox-service a transitional package that depends on
